--- a/client/src/component/Header/Header.css
+++ b/client/src/component/Header/Header.css
@@ -1,9 +1,7 @@
-.Header {
-    background-color:orangered;
+.ui.inverted.menu {
+    background-color:orangered !important;
     color: white;
     font-size: 2rem;
-    padding: 1.2rem;
     text-align: center;
     font-weight: 600;
-    margin-bottom: 2rem;
 }
