--- a/client/src/assets/scss/material-dashboard-pro-react.css
+++ b/client/src/assets/scss/material-dashboard-pro-react.css
@@ -53,6 +53,25 @@ This file was modified by Creative-Tim
     /* font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif!important;  */
 }
 
+.gpxfile-container {
+    position: relative;
+    cursor: pointer;
+    text-align: left;
+    height: fit-content;
+    width: fit-content;
+}
+
+.gpxfile-container input[type="file"] {
+    cursor: pointer;
+    display: block;
+    height: 100%;
+    left: 0;
+    opacity: 0 !important;
+    position: absolute;
+    top: 0;
+    width: 100%;
+}
+
 
 .noUi-target,
 .noUi-target * {
