--- a/client/src/assets/scss/material-dashboard-pro-react.scss
+++ b/client/src/assets/scss/material-dashboard-pro-react.scss
@@ -52,3 +52,6 @@
 // Core CSS
 @import "material-dashboard-pro-react/misc";
 @import "material-dashboard-pro-react/fileupload";
+
+// custom css
+@import "custom"
