--- a/client/src/assets/scss/_custom.scss
+++ b/client/src/assets/scss/_custom.scss
@@ -3,12 +3,6 @@
     color: orangered !important;
 }
 
-.Accordion-title-550 {
-    /* color: #3C4858!important;
-    font-size: 1.28571429rem!important; */
-    /* font-weight: 300!important; */
-    /* font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif!important;  */
-}
 
 .gpxfile-container {
     position: relative;
@@ -27,5 +21,9 @@
     position: absolute;
     top: 0;
     width: 100%;
+}
+
+.marginTop {
+    margin-top: 50px;
 }
 
