--- a/client/src/assets/scss/_custom.scss
+++ b/client/src/assets/scss/_custom.scss
@@ -9,6 +9,7 @@
     text-align: left;
     height: fit-content;
     width: fit-content;
+    width: 100%;
 }
 
 .gpxfile-container input[type="file"] {
@@ -31,4 +32,10 @@
 }
 .margin-auto {
     margin: auto!important;
+}
+.p1 {
+    padding: 0 7px!important;
+}
+.no-padding {
+    padding: 0!important;
 }
