--- a/client/src/assets/scss/_custom.scss
+++ b/client/src/assets/scss/_custom.scss
@@ -39,3 +39,9 @@
 .no-padding {
     padding: 0!important;
 }
+
+.rdtTime,.rdtDays {
+    visibility: visible!important;
+    opacity: 1!important;
+    display: block!important;
+}
