--- a/client/src/assets/scss/material-dashboard-pro-react.css
+++ b/client/src/assets/scss/material-dashboard-pro-react.css
@@ -2608,3 +2608,8 @@ img {
 
 .no-padding {
   padding: 0 !important; }
+
+.rdtTime, .rdtDays {
+  visibility: visible !important;
+  opacity: 1 !important;
+  display: block !important; }
