--- a/client/src/assets/scss/_custom.scss
+++ b/client/src/assets/scss/_custom.scss
@@ -68,7 +68,9 @@
             border-radius: 10px !important;
             font-size: 20px !important;
         }
-
+        .rdtDay.rdtActive {
+            background: orangered !important;
+        }
         .rdtDay.rdtToday.rdtActive {
             background: orangered !important;
             border-radius: 10px !important;
